--- a/04-B-binary-data.Rmd
+++ b/04-B-binary-data.Rmd
@@ -1,7 +1,7 @@
 ---
 layout: topic
 title: "GLM with binary and proportional data"
-author: Tad
+author: Meghan Howard
 output: html_document
 ---
 
