Added student name

--- a/05-B-Bayesian-priors.Rmd
+++ b/05-B-Bayesian-priors.Rmd
@@ -1,7 +1,7 @@
 ---
 layout: topic
 title: "Bayesian Inference with Prior Information"
-author: Jes
+author: Nicole Nova
 output: html_document
 ---
 
