--- a/02-C-student-projects.Rmd
+++ b/02-C-student-projects.Rmd
@@ -1,7 +1,7 @@
 ---
 layout: topic
 title: "Student Projects"
-author: [Instructor and Student names]
+author: Jes & Tad
 output: html_document
 ---
 
