--- a/02-C-student-projects.Rmd
+++ b/02-C-student-projects.Rmd
@@ -91,3 +91,9 @@ Brief description of the question you want to ask and the data you have to analy
 **Project Title**
 
 Brief description of the question you want to ask and the data you have to analyze it.
+
+#### Nick
+
+**Project Title**
+
+Brief description of the question you want to ask and the data you have to analyze it.
