--- a/02-C-student-projects.Rmd
+++ b/02-C-student-projects.Rmd
@@ -25,9 +25,9 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 #### Anna
 
-**Project Title**
+**Spatiotemporal Analysis of the San Francisco Estuary Water Column Microbiome**
 
-Brief description of the question you want to ask and the data you have to analyze it.
+I will explore environmental drivers on archaeal and bacterial communities in bottom waters of San Francisco Bay using 16S rRNA amplicon libraries and geochemical water column data from USGS water quality cruises.
 
 
 #### Beth
