--- a/02-C-student-projects.Rmd
+++ b/02-C-student-projects.Rmd
@@ -34,7 +34,7 @@ Brief description of the question you want to ask and the data you have to analy
 
 **Project Title**
 
-Brief description of the question you want to ask and the data you have to analyze it.
+Beth is cool.
 
 
 #### Jamie
