--- a/02-C-student-projects.Rmd
+++ b/02-C-student-projects.Rmd
@@ -34,7 +34,7 @@ Brief description of the question you want to ask and the data you have to analy
 
 **Project Title**
 
-Beth is cool.
+Beth is super cool.
 
 
 #### Jamie
