--- a/03-A-data-exploration.Rmd
+++ b/03-A-data-exploration.Rmd
@@ -32,8 +32,7 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 
 ### Analysis Example
-```{r include = FALSE}
-# 
+```{r}
 library(phyloseq)
 library(readr)
 
@@ -99,6 +98,12 @@ dotchart(sample_sums(merged_data), xlab = "Sequences per sample",
 
 
 
+talk about useful interesting new things i learned to do. 
+output if confusing will be a discussion point
+things you don't agree with/agree with
+discuss ambiguity 
+look at OTUs and discuss outliers
+data transformation 
 
 
 ### Discussion Questions
