Added after class follow up, added png images

--- a/03-A-data-exploration.Rmd
+++ b/03-A-data-exploration.Rmd
@@ -30,7 +30,6 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 ### Key Points
 
-
 #### Data exploration
 
 1. Outliers Y & X
@@ -72,8 +71,6 @@ Not all steps always needed
     + But only practical for large data sets
 + Emphasis on graphical tools
 
-
-***
 
 ### Analysis Example
 ```{r, include=FALSE, eval=TRUE}
@@ -174,19 +171,25 @@ Zurr et al. recommends plotting your data using boxplots and dotcharts to detect
 Since my data is multivariate, I used sequence count per sample for outlier detection in the following examples. 
 
 **Boxplot**
-```{r}
+
+![](/Users/psanjuan/Documents/R/Eco_stats_proj/BIO202_project/images/boxplot.png)
+```{r, eval = FALSE}
 boxplot(sample_sums(merged_data),  ylab = "Sequences per sample")
 ```
 
 **Cleveland dotchart**
-```{r}
+
+![dotchart](/Users/psanjuan/Documents/R/Eco_stats_proj/BIO202_project/images/dotchart.png)
+```{r, eval = FALSE}
 dotchart(sample_sums(merged_data), xlab = "Sequences per sample",
          ylab = "Samples", labels = F)
 ```
 
 **Plotly - great visualization tool**
 
-```{r}
+![ggplot](/Users/psanjuan/Documents/R/Eco_stats_proj/BIO202_project/images/ggplot.png)
+
+```{r, eval = FALSE}
 seq_num <- data.frame(ID=sample_data(merged_data)$ID, Seq=sample_sums(merged_data))
 dot_gg <- ggplot(seq_num, aes(x=Seq,y=ID)) + geom_point(col="coral") + 
   theme(axis.text.y = element_blank(), axis.ticks.y = element_blank())
@@ -201,7 +204,10 @@ ggplotly(dot_gg)
 
 Since most of the variables in my dataset are categorical, here I used raw data (sequence count) subsetted by bird species.
 
-```{r}
+
+![dotchart_variable](/Users/psanjuan/Documents/R/Eco_stats_proj/BIO202_project/images/dot chart_variable.png)
+
+```{r, eval = FALSE}
 Z <- qpcR:::cbind.na(sample_sums(data.BTSA), sample_sums(data.CCRO), sample_sums(data.OBNT),
            sample_sums(data.RCWA), sample_sums(data.SWTH), sample_sums(data.YWAR))
 colnames(Z) <- c("BTSA", "CCRO", "OBNT", "RCWA", "SWTH", "YWAR")
@@ -216,10 +222,6 @@ dotplot(as.matrix(Z), groups = FALSE,
         ylab = "Order of the data from text file")
 ```
 
-
-***
-
-
 #### Your data's distribution 
 
 Some statistical tests assume normal distributions, making it important to check the shape of your data. Plot a histogram with all of your data and then groups of your data.
@@ -227,7 +229,10 @@ Some statistical tests assume normal distributions, making it important to check
 > "If you want to apply a statistical test to determine whether there is significant group separation in a discriminant analysis, however, normality of observations of a particular variable within each group is important" 
 
 **Histogram**
-```{r}
+
+![histogram](/Users/psanjuan/Documents/R/Eco_stats_proj/BIO202_project/images/histogram.png)
+
+```{r, eval = FALSE}
 hist(sample_sums(merged_data), breaks = 100,col = "#a6bddb", xlab="Sequences per sample", main = ' ')
 ```
 
@@ -252,4 +257,25 @@ hist(sample_sums(merged_data), breaks = 100,col = "#a6bddb", xlab="Sequences per
 **Q4:** What are some data exploration techniques you have used?
 
 
+***
 
+### After-class follow-up
+
++ beeswarm functions recommended by Anna to look at data distribution:
+
+[ggbeeswarm](https://cran.r-project.org/web/packages/ggbeeswarm/index.html)
+
+[ggbeeswarm vignette](https://cran.r-project.org/web/packages/ggbeeswarm/vignettes/usageExamples.pdf)
+
+[beeswarm](http://www.cbs.dtu.dk/~eklund/beeswarm/)
+
++ O'Hara and Kotze 2010 Do not log-transform count data:
+
+[Publication](http://onlinelibrary.wiley.com/doi/10.1111/j.2041-210X.2010.00021.x/abstract)
+
+[Blog post](https://www.r-bloggers.com/do-not-log-transform-count-data-bitches/)
+
+
++ Paper Tad mentioned that uses "principal coordinate analysis of a truncated distance matrix" (PCNM) to incorporate spaptial trends in multivariate data:
+
+[Toju et al. 2017](http://web.stanford.edu/~fukamit/toju-et-al-2017-accepted.pdf)
