--- a/03-C-heterogeneity.Rmd
+++ b/03-C-heterogeneity.Rmd
@@ -30,7 +30,52 @@ repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 
 ### Key Points
 
+#### From Chapter 2
+"In none of these [35] real data sets could we find a non-trivial example for a linear regression model for which all assumptions held."
 
+#### Heterogeneity
++ One frequently violated assumption = homogeneity, i.e., that residuals are normally distributed with a mean of 0 and a fixed variace, σ2:
+
+    + Yi= α + β1*X1i + β2*X2i + εi
+    + εi~N(0,σ2)
+
++ How to check for homogeneity
+    Residuals vs. fitted values (Fig 4.2a)
+
++ How to identify source of variation in residuals
+    Residuals vs. explanatory variables (Fig. 4.2b, c)
+
+#### Many variance structures (Table 4.1)
+  + `V1<-varFixed(∼DML)`
+     + εi ∼ N(0, σ2 × DMLi )  i = 1, . . . , 768
+  + `V1<-varIdent(form= ∼ 1 | fMONTH)`
+     + εi j ∼ N(0, σ2j )  j = 1, . . . , 12
+  + `V1<-varPower(form =∼ DML)`
+     + εij ∼ N(0, σ2 × |DMLi|^2δ)
+  + `V1<-varPower(form =∼ DML | fMONTH)`
+     + εij ∼ N(0, σ2 × |DMLij|^2δ)
+  + `V1<-varExp(form =∼ DML)`
+     + εij ∼ N(0, σ2 × e^(2δ×DMLi) )
+  + `V1<-varConstPower(form =∼ DML) `
+     + εij ∼ N(0, σ2 × (δ1 + |DMLij|^δ2 )^2
+  + `V1<-varComb(varIdent(form =∼ 1 | fMONTH), varExp(form =∼ DML))`
+     + εij ∼ N(0, σ2j × e^(2δ×DMLij) )
+
+How to choose variance structure? - AIC, e.g., `AIC(M.lm, M.gls1, M.gls2)`
+
+#### Suggested protocol
+1. Fit a full model
+2. Plot standardized residuals vs. each predictor
+    + If variance shows a relationship with any predictor,
+      re-fit model with a modified variance structure.
+3. Compare models using AIC or LR test
+    + If better, extract standardized residuals, plot against other factors,
+      and continue to modify variance structure.
+4. Remove non-significant terms from fixed effects, re-examine residual plots (iterative process)
+5. Interpret
+
+
+*** 
 
 ### Analysis Example
 
