--- a/02-C-student-projects.Rmd
+++ b/02-C-student-projects.Rmd
@@ -45,9 +45,9 @@ Determine what environmental and biological factors drive benthic community stru
 
 #### Lizzie
 
-**Project Title**
+**The Effect of Rotational Cattle Grazing on Soil Nutrient Dynamics**
 
-Brief description of the question you want to ask and the data you have to analyze it.
+By investigating the fluxes in greenhouse gases and in soil nitrate and ammonia levels before, during, and after grazing events, I will study the effects of rotational cattle grazing on soil nutrient dynamics.
 
 
 #### Marissa
